# moving-average

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
